# andreano.dev

./: CNAME  LICENSE  README.md  blockchain.html  config.toml  flake.nix  index.html  note.md  project-template.html  rangefinder.html  result  tetherball.html  todo.md  websites.html
site/: Cargo.toml  challenges.json  todo.md
site/src/: main.rs  preprocessor.rs  server.rs
site/src/server/: comment.rs  mod.rs  serve.rs
site/website/: challenges.json  comments.json  justfile  perf.data
site/website/input/: about.md  etc.html  etc.md  index.html  site.md
site/website/input/404/: 404.md
site/website/input/about/: about.md
site/website/input/about/resume/: other.sty  resume.fdb_latexmk  resume.fls  resume.tex
site/website/input/about/styles/: timeline.css
site/website/input/blog/formula-hybrid-2024/: formula-hybrid-2024.md
site/website/input/blog/formula-hybrid-2025/: formula-hybrid-2025.md
site/website/input/blog/love-letters/: frame.stl  index.js  love-letters.md
site/website/input/blog/msoe-scraper/: msoe-scraper.md
site/website/input/blogroll/: blogroll.md
site/website/input/colophon/: colophon.md
site/website/input/comment/: comment.html
site/website/input/etc/: etc.md
site/website/input/info/: info.md
site/website/input/lorem/: lorem.md
site/website/input/scripts/: comment.js  home.js  theme.js
site/website/input/site/: site.md
site/website/input/styles/: comment.css  home.css  index.css  math.css  menu.css  prism.css  style.css  timeline.css
site/website/templates/: base.html  comments.html  index.html  menu.html  post.html
(+161 files in other folders)
