[package]
name = "site"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = true
codegen-units = 16
debug = false
panic = "unwind"
incremental = true

[dependencies]
pulldown-cmark = "^0.13"
latex2mathml = "0.2.3"
ramhorns = "1.0.1"
syntect = "5.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" # for comments
serde_yaml="0.9" # for frontmatter
rand = "0.8" # challenge generation

uuid = { version = "1.0", features = ["v4"] } # challenge ID
chrono = "0.4.40"
image = "0.24"
